--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 <ifmodule mod_rewrite.c>
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^54yb.com [NC]
-RewriteRule ^(.*)$ http: //www .baidu.com/ $1 [L,R=301]
+RewriteCond % ^8cuo.org$ [OR]
+RewriteRule ^(.*)$ http://www.8cuo.org/newslist.html/ [R=301,L]
 </ifmodule>
