--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,5 @@
 Options +FollowSymLinks
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^8cuo.org [NC]
-RewriteRule ^(.*)$ http://www.8cuo.org/newslist.html/$1 [L,R=301]
+RewriteRule ^(.*)$ http://www.8cuo.org$1 [L,R=301]
 </ifmodule>
